--- a/libfabric.vcxproj
+++ b/libfabric.vcxproj
@@ -887,7 +887,7 @@
     <ClCompile Include="prov\efa\src\efa_prov_info.c" />
     <ClCompile Include="prov\efa\src\efa_fork_support.c" />
     <ClCompile Include="prov\efa\src\efa_base_ep.c" />
-    <ClCompile Include="prov\efa\src\dgram\efa_ep.c" />
+    <ClCompile Include="prov\efa\src\dgram\efa_dgram_ep.c" />
     <ClCompile Include="prov\efa\src\dgram\efa_dgram_cq.c" />
     <ClCompile Include="prov\efa\src\dgram\efa_msg.c" />
     <ClCompile Include="prov\efa\src\dgram\efa_rma.c" />
