--- a/libfabric.vcxproj
+++ b/libfabric.vcxproj
@@ -889,7 +889,7 @@
     <ClCompile Include="prov\efa\src\efa_base_ep.c" />
     <ClCompile Include="prov\efa\src\dgram\efa_dgram_ep.c" />
     <ClCompile Include="prov\efa\src\dgram\efa_dgram_cq.c" />
-    <ClCompile Include="prov\efa\src\dgram\efa_msg.c" />
+    <ClCompile Include="prov\efa\src\dgram\efa_dgram_msg.c" />
     <ClCompile Include="prov\efa\src\dgram\efa_rma.c" />
     <ClCompile Include="prov\efa\src\rdm\rxr_pkt_type_base.c" />
     <ClCompile Include="prov\efa\src\rdm\rxr_op_entry.c" />
